--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     }
   ],
   "require": {
-    "php": "~7.0"
+    "php": "^7.0"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.0",
